--- a/WinFormUI/frmMain.resx
+++ b/WinFormUI/frmMain.resx
@@ -63,4 +63,81 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>60</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMCAwAAAAAAJyYkAENG
+        QwFXWFcBKSgoAaKopQBvdHEBqK+sAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACguKwAcJR8ARDNBAkZI
+        PAMvSCYEPVIuBklPMgZGSTIGP1I1BTVLLgU2PSUDMDY0AjVJOAEtkRYAKYkaAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJCQmABkZGgApMioBOT0iAzNI
+        KQU/STAIPUcwCztKNA4/SzEQQ043EUJNNBFBTDUQQkw3Dj1LMAw8SjAIOkQyBTlJMgMzMjMBSkhJAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wArKzABKSsnAjU7
+        HwVARC4JPUs1D0FMMhNCTTYYQVA3HEJPNx9DTzchQk01IEJNNB9CTDUcQE81GD9NNxQ/SjQPOT4vCTc9
+        MQUvLR8CBAsJAAkQCQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHLQcgCD84YAYJFOATdE
+        LQM3SDAHQUw0DUNPNxVCTzUcQ082I0NPNihDUDcrQk82LUJONi1CTjYuQ082LkNPNixCTzcpQU43I0JN
+        Nhw8SDMVPkw2DTlFMwg0OzYDLyxIAUdGTwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFykYABMj
+        FQExSiwEQ04vCD9OMxBATzUaQ1A4IkFMNCk7RiswPEguP0JONVBEUDhaRFE4XENPNlY/SjFJO0YsOkBL
+        NDNCUDcxQ1A4K0JNOCNBTTgaQUw4ED1INwg4TC0EWWBKAQAAAACAgHwAAAAAAAAAAAAAAAAAAAAAAI6N
+        jgA1NTcBQ0E1A0RKNQlDUDYRQU41HEBMMiU7Ris2S1lDY2t8bJ+InZPLmrGr5KO6t/GkvLnznrWw6Y6j
+        m9VzhnizVWRPej5KMkc/SzM1Qk43MENONidCTjUcQ083EUVPNglDTy0DRkAKAD8/DQAAAAAAAAAAAAAA
+        AACFlnkAxL28ADlKNgJBTTIHRk03EUNONxw9STEoSVdAWHSHebSguLTxv9vd/83r7//Q7fL/0O3z/9Dt
+        8//P7fL/zuvw/8bi5f+wycj5iJ2TzFRjT3k+SDA9Q041MkNONilETjccQkw3ED1QOQg1OEkCAAD/AAAA
+        0wAAAAAATExCAEVDSQBYVE8CSk04BUNPNg1EUDcZPEctKFhnU3eVrKXhw9/h/9Dt8//H4+f/s83M/6W+
+        uv+etbD/nLOu/6C4s/+owr7/udTU/8zp7f/L5+v/pr6682p7aqE9Si9EQk41MUJONidCTTYaPEs3DTlG
+        MAUoPBABAAAAAAAAAAAaGTsAExA/ADtBJwNBTTUKQk82FTpHLiRaalh5oLi07c3p7v/M6O3/r8jH/5y0
+        rv+nwL3/udPU/8Le4P/G4uX/wdzf/7XPz/+ju7f/mrGr/7bQ0P/O6/H/s87N+26Acaw+SjFEQ044MENP
+        NyNCTTgVPUMyCTs7MQNdXWMAWVlZAGFqLAA1Ni0BPEYuBkVSOA88SC8bVGJNY520r+rO6u//xeHk/561
+        sP+owb7/yOXp/9Dt8v/P7PL/z+zx/8/s8f/P7fL/z+zy/8/s8f/B3d//n7ex/6jBvf/M6e7/sszL+2d4
+        aJ49SC85RFA3K0VPNxw9SDIPQEU9BUNQRAH/uP8AqqSgAFRYRgI+TDgIQk43E0BNNDeJnZTMyubq/8jk
+        6P+etrH/m7Ks/520r/+mvrv/qMG9/6S8uP+ju7f/pb26/6e/vP+Vq6X/udTU/6/Jx/+hubT/qcK//6W9
+        uv/O6/D/o7u48FBeSHBBSzMvQ083Iz9NMhQ+TTgIUmhPAmAALAAeHRwBNVQtA0BOOAs1QCYXanpqgrnT
+        1PzP7PH/orq2/7LLyv+lvrr/nrax/4qglv+Rp5//kKae/4uhl/+Qpp7/j6Wc/4ugl/+vycf/udTU/5Ko
+        of/G4uX/o7u3/7LMy//I5ej/e46BxDxILj9CTjYoQEw0GUBNMwtFTjUDdMo7AGpwbgE/TDUFQkoyDTxF
+        LC6NoZnOzerv/7nT0/+ftrH/zevw/8Hd3/+kvLj/rcbE/7vW1/+/293/sMnI/7/a3P/I4+f/wt3f/77Z
+        2v+/293/qMC9/8nm6v/G4+b/nbWw/8jk6P+mvrvyTlxGaEBNMypATjIdPEsxDjlIMARFOj8AOFg6AUZT
+        QAU+Ri8NUV5LV6nCwPXQ7fL/obm0/7vW1//P7PH/z+zx/9Dt8v+/2tz/fI+D/6e/vP/O6u//0O7z/7vW
+        1/9/k4f/pr66/9Dt8v/P7fL/zuvw/9Dt8v+sxcP/rsfG/8Hd3/9rfGybO0YsLUFONSA9SS4QSVI9BlxY
+        WwE2TDkBRFs4BjU7Hw5qe2t+vNfY/8fj5v+ctK7/y+fs/87r8P/O6/D/zuvw/8zp7v94i37/TFpE/4SY
+        jf+UqqL/WmpX/1ppVv++2dv/z+zx/87r8P/O6/D/z+zx/8Db3f+gt7L/yeXp/4SZjcI7Ris4Qk43IEVS
+        OhFMUEgGWVhbATlVPAFAWDgGKjISD3aIepvG4uX/vNfY/6W9uf/O7PH/zuvw/87r8P/O6/D/0O7z/6S9
+        uf9IVj//aHlp/3iLfv9DUDj/gZWJ/87r8f/O6/D/zuvw/87r8P/O6/D/yeXp/521r//I5Oj/kaef2DtG
+        Kz5DUDggRlI7EUpRSAZCPkMBfIN8AUJYQgUaJAQOeIx/p8rm6/+30dH/qMC9/9Dt8//O6/D/zuvw/9Dt
+        8v/H4+b/kKae/0pYQv+FmpD/n7ey/2N0Yv91iHr/u9bX/8/s8v/O6/D/zuvw/87r8P/N6u//nLOu/8fk
+        5/+WrKXiO0UrQEFONh5ATjQQOkc4BS0tLgFCQkMBRk9FBRogAAx3in2gyOTo/7fS0v+mv7z/0O3y/87r
+        8P/N6u7/rsjG/26Bcf9GVDz/Q083/4WZj/+ju7f/hZmP/0tYQv9dbVn/nrWw/8nl6f/O6/D/zuvw/83q
+        7v+dtK//x+Pn/5Sqo906RSs9Qk02HEBJMw4qPygEKCspAfbl9gA/T0ADGiUECXGDdIjB3N7/vtnb/6K6
+        tv/O6/D/zuzx/8Pf4v+WrKX/hJmO/4abkf98j4P/YHBe/2d3Zv+Mopn/jKGZ/4SZjv+No5r/t9LS/8/s
+        8f/O6/D/yOTo/562sf/G4+b/iqCWyjpFKzNDTjgYQ0s6CzAxMAMAAAAA////AFJSTwImKxwFXm5bXLLM
+        y/rJ5ur/m7Kt/8nl6f/O6/D/zerv/83q7//O7PH/z+3y/8Xi5v9ldmX/TFpD/6/Ix//Q7fP/zuzx/87r
+        8P/N6u//zuvw/8/s8f+92Nn/orq1/8Tg4/92iHuoN0MmJUNQMhRCSzsIRkU1AlhYRABTUwAAYF5IATxJ
+        LARCTjYtmbCq3c/s8f+jvLj/t9HS/8/s8v/O6/D/zuvw/87r8P/O6/D/z+zy/46km/9tf2//yOXo/87s
+        8f/O6/D/zuvw/87r8P/O6/D/z+zx/6a+u/+1z8//s83M+lppVnM5RSwaRU44D0RGPQZEQ0UBNzc8AC0t
+        LAAqJikAQklBAyInCwx0h3mdwdzf/8Hd3/+etrH/yubr/87r8f/O6/D/zuvw/87r8P/P7fL/tc/P/6G5
+        tf/P7PH/zuvw/87r8P/O6/D/zuvw/8/s8f/A3N7/mrGr/8jl6P+UqqPUQEsyOENLNhRGTzwKREM/Axwc
+        HwAkJCQAe3t9AN234QBBXUIBKigWA0xZQz+etbDkz+zx/6vEwv+nwL3/zuvw/87r8P/O6/D/zuvw/87r
+        8P/M6e7/yufr/87r8P/O6/D/zuvw/87r8P/P7PH/yubr/520r/+61NX/tc/P+mZ3Zn43QyYYQU0zDUBP
+        MgUrSjcBQQ9FADc3NwAAAAAASUNJACojKQBRV0ECHiwKCWx9bn2zzcz6zOnu/6O7t/+sxcL/zOnt/8/s
+        8f/O6/D/zuvw/87r8P/O6/D/zuvw/87r8P/O6/D/z+3y/8bi5v+guLT/sMrJ/8Pf4v+AlIm5PUctK0VP
+        OBBHUjYHUVdQAkJjugBGYJEAAAAAAAAAAAAAAAAALjk1ABwfFgE9SzkCOEUpFnaKe56409P8zOnt/6a/
+        vP+etbH/vdjZ/83q7//P7PL/z+3y/8/t8v/P7PL/z+zy/8vo7P+40tL/m7Kt/7LMy//F4eT/i6GYzklW
+        P0JASi0QQFAzCUlONQMoJSQBc29sAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAvMAFDQzMCOUMpGXaJ
+        e5uxysn3zenu/7nU1P+dtbD/n7ax/63GxP+20dH/udPU/7TOzv+pwr//m7Ot/6W+uv/D3+L/wNvd/oid
+        k8tKWUNDPUYsD0NTMgk4XTIEWGQ2AQAAAADd3WoAAAAAAAAAAAAAAAAAAAAAAAAAAABWVlYAXk9eAEVf
+        RQEoOjICND0oEmd3Z3KasavdwNze/svo7P/B3N//ss3M/6nCv/+mvrv/q8TB/7bQ0P/E4OP/w9/i/6W9
+        ufB3iXygRFI5Mj5HLgxITz0IU1Y8BDBMMAEJAAgAHRgdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAn0DAAQpBQEzUSkCEg4ABUxYQy50hneGkaafz6rDwfC51NT8wdze/8Le4P+819j9sMrJ9Zqx
+        q915jH+kUWBKUi88HhU6Ti4IR1o1BUtjSwJ2cVQB////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAIjQAACcyAABETEABN1w1AQ0VBgU4RSkeVmZQQ2Z3ZmdrfG18a31tf2d4
+        aHFcbVlSQk41KykyFw87SicGNVAuBUhVOQNRVzQBHx4eAC4xLgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGt8WgBvgFgAaWxnAVRXcQA1N0cAAAAAAAAA
+        AAEAAAACAAAAAg8eDwI9RzQDQ0suAz5LNwJcXFkBUktWAFZSVgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANCgoAIB4dAHp7
+        eQFjPGUBRlQaAWd1AAEcQhoBGy1DAQIWBwAAAAEAAAEAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA//xf///gA///AAD//AAAf/gAAB/wAAAP4AAAD+AAAAfAAAADwAAAA4AA
+        AAGAAAABAAAAAQAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAGAAAABgAAAAcAAAAPAAAAD4AAAB+AA
+        AAfwAAAP+AAAH/wAAD//AAD//9wD///wP/8=
+</value>
+  </data>
 </root>
