--- a/WinFormUI/frmAdmin.resx
+++ b/WinFormUI/frmAdmin.resx
@@ -57,7 +57,90 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="flpNavBar.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="pnlMain.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMCAwAAAAAAJiUkAERH
+        RAFOTk0BLi0uAZWcmABob2sBmqKfAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACguKwAcJR8ARDNBAkZI
+        PAMvSCYEPVIuBklPMgZGSTIGP1I1BTVLLgU2PSUDMDY0AjVJOAEtkRYAKYkaAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJCQmABkZGgApMioBOT0iAzNI
+        KQU/STAIPUcwCztKNA4/SzEQQ043EUJNNBFBTDUQQkw3Dj1LMAw8SjAIOkQyBTlJMgMzMjMBSkhJAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wArKzABKSsnAjU7
+        HwVARC4JPUs1D0FMMhNCTTYYQVA3HEJPNx9DTzchQk01IEJNNB9CTDUcQE81GD9NNxQ/SjQPOT4vCTc9
+        MQUvLR8CBAsJAAkQCQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHLQcgCD84YAYJFOATdE
+        LQM3SDAHQUw0DUNPNxVCTzUcQ082I0RQNChGUTIrRU8wLUROLi1FTzEuRU8zLkNPNixCTzcpQU43I0JN
+        Nhw8SDMVPkw2DTlFMwg0OzYDLyxIAUdGTwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFykYABMj
+        FQExSiwEQ04vCD9OMxBATzUaRFA2IkRMLSk7RSswM0dHPzBNYVA3VnFaOFhzXDJQZ1YzS1JJOEU0OkJL
+        LjNDUDUxQ1A4K0JNOCNBTTgaQUw4ED1INwg4TC0EWWBKAQAAAACAgHwAAAAAAAAAAAAAAAAAAAAAAI6N
+        jgA1NTcBQ0E1A0RKNQlDUDYRQU41HEJMLCUyRT82NVeAY0x1sJ9ficrLY4nT5GCE1PFjh9bzZIvW6V6F
+        zNVSfbmzOl+OejVJTkdBTC41Q041MENONydCTjUcQ083EUVPNglDTy0DRkAKAD8/DQAAAAAAAAAAAAAA
+        AACFlnkAxL28ADlKNgJBTTIHRk03EUNONhw8SDAoMlR5WFN+vbR6pOPxlb73/4+09f9jfN3/U2jU/09i
+        0f9bc9j/co/l/5jB+f+Fruz5ZI7MzDlejXk4Rzs9RE4zMkNONilETjccQkw3ED1QOQg1OEkCAAD/AAAA
+        0wAAAAAATExCAEVDSQBYVE8CSk04BUNPNg1FUDUZOkgzKDpil3dtmNjhlb73/5/H/f+Vvvf/gqvr/2SI
+        2v9fgtf/ZYva/2OH2f9vlOD/kLjz/53F/P+aw/v/fajm80pzrqE1S0lEQ04yMUJONidCTTYaPEs3DTlG
+        MAUoPBABAAAAAAAAAAAaGTsAExA/ADtBJwNBTTUKQ080FThGNCRCaqF5fafl7ZzF/P+YwPj/gKvp/32p
+        5/+MtvH/mMH5/5rE+v+aw/r/mcP6/5C69P+Druv/f6vp/5K89f+exv3/i7Xx+1N9uKw0SktERE81MENP
+        NyNCTTgVPUMyCTs7MQNdXWMAWVlZAGFqLAA1Ni0BPEYuBkVSOA8/SSkbN12RY3ei4eqexv3/k7z2/3ag
+        4/9qjN7/iKvw/32d6/9viuP/aIPg/36e6/+KrfL/lbv3/3+g7P99oOr/aY/d/4q08P+fx/3/ibPv+0Zv
+        qp46SDk5RFA2K0VPNxw9SDIPQEU9BUNQRAH/uP8AqqSgAFRYRgI+TDgIRk8uEytJZTdkj9DMmsP7/5O8
+        9v9+qej/kbn0/1No0/9IWs3/WnDX/1Jn0/9geNr/TGDQ/1Fl0v9xjuT/VWrU/3SR5v9kftz/hK/s/4my
+        7/+exv3/eqTj8Ddbh3BCSy4vQ083Iz9NMhQ+TTgIUmhPAmAALAAeHRwBNVQtA0BOOAs2QCMXSXKvgoy2
+        8fybxPv/fqno/5K79f+fyP3/YHja/0RVy/9JXM7/V2vV/3eV5/9RY9H/QVDJ/1932v9UadT/ZoHe/0lb
+        zv+Iq/D/e6bm/5O79f+Zwvr/WYPExDJGRz9DTzQoQEw0GUBNMwtFTjUDdMo7AGpwbgE/TDUFRkwpDSdE
+        YC5nktTOncX8/4u18P+GsO3/nsb9/57G/P+NsfP/dZLm/36o7/9tsfH/ecT2/2O08P9anur/cpjo/4Ok
+        7v97m+r/cIzj/4ms8f+RuvT/fKfn/57G/f9/qebyOFqDaEJNLCpATjIdPEsxDjlIMARFOj8AOFg6AUZT
+        QAVHRhcNM1uWV4Cr6PWdxfz/fafn/5e/+P+dxfz/ncX8/5/G/P+Kyf3/TtP+/0ff//+n+P//TNn+/yrG
+        /v9Ls/z/lsP8/5/H/f+fx/3/nsb8/53F/P9/qen/lL32/5O89v9Kc66bPEcsLUFONSA9SS4QSVI9BlxY
+        WwE2TDkBRFs4Bjg6Ew5IcrR+kbr0/5S99v+BrOr/ncX8/53F/P+dxfz/mMP8/1/K/f871P7/Pdj9/13t
+        /v8crvv/FZ77/xmJ9f97s/n/n8b8/53F/P+dxfz/nsb9/4q08P+Gse7/nMT7/2CLycIwREE4Q081IEVS
+        OhFMUEgGWVhbATlVPAFAWDgGLTcXD1B8wJuYwfn/jrfz/4Wv7f+exv3/ncX8/57F/P+Uwfz/T8L8/y/K
+        /P8alff/HLn6/x2+/f8VmPn/En7z/0WP8/+RvPr/nsb8/53F/P+exvz/krv1/4Gr6v+fx/7/apXV2C1F
+        UD5FUDQgRlI7EUpRSAZCPkMBfIN8AUJYQgUjMBQOVYLGp5nB+v+Ot/L/ha/s/57G/f+dxfz/ncX8/5zE
+        /P9frvn/Ir75/x2h9/8UevD/HIjv/xmN9P8SefH/E3bw/1eL8P+dxfz/ncX8/57G/P+Su/X/gazq/5/H
+        /v9tmNniMktbQENNMB5ATjQQOkc4BS0tLgFCQkMBRk9FBR8oCgxSf8OgmcH6/4638v+Gr+3/nsb9/53F
+        /P+dxfz/lcX8/2Wk9/8jkvL/J675/0Sh9f81gu3/E13l/xRf5v8SZen/UH/t/53F/P+dxfz/nsb8/5K7
+        9f+BrOr/n8f+/2uX190tR1c9RE0wHEBJMw4qPygEKCspAfbl9gA/T0ADHCYACUt3vYiVvff/kLnz/4Ks
+        6/+exvz/ncX8/53F/P+WxPz/hLb6/zh+7v8Sa+v/KoDu/zyw+/8fhfL/CT/b/yVf4/+Fs/n/nsb8/53F
+        /P+exvz/j7jz/4Su7P+dxfz/ZpDQyitDSzNFTzQYQ0s6CzAxMAMAAAAA////AFJSTwI6LAAFO2erXIex
+        7fqaw/r/fafn/5vD+v+dxfz/ncX8/53F/P+exfz/j7n5/0J06f8PWOT/Dmns/w5k6f8LOtf/RHnq/5zF
+        /P+dxfz/ncX8/57G/P+Drev/j7nz/5fA+f9Ufr6oM0MxJURQMRRCSzsIRkU1AlhYRABTUwAAYF5IAVlP
+        AAQhS4gtdJ/g3Z7G/f+CrOr/i7Xx/57G/f+dxfz/ncX8/53F/P+fx/3/bZTu/x1a4f8MTOD/DFHg/wwr
+        yv8tVdr/lL76/57G/P+dxfz/l8D5/36p6P+bw/v/iLLu+jxlnnM9RiEaRU44D0RGPQZEQ0UBNzc8AC0t
+        LAAqJikARko7AxMnMQxQfsWdlL33/5W+9/96peX/mcH5/53F/P+dxfz/ncX8/5nB+/9yl+7/dp/x/yRR
+        3v8HPNr/BSPI/zdb2/+XwPv/ncX8/53F/P+Eruz/i7Xw/57G/f9tl9fUKkllOEdMLRRGTzwKREM/Axwc
+        HwAkJCQAe3t9AN234QBBXUIBTSkAAylXnj91oOHknsb9/4mz7/+Aq+r/nMT7/53F/P+dxfz/nMP8/5a+
+        +v+DqPb/HTnX/wceyP8XL8z/YIbs/5vD/P+exvz/jLXx/3+q6f+dxfz/ibPv+kRurH45RCQYQU0zDUBP
+        MgUrSjcBQQ9FADc3NwAAAAAASUNJACojKQBbWSwCDy41CUVzvH2Ise76nsb9/4iz7/+Aqun/mMH5/57G
+        /f+dxfz/j7j5/12A6/8KHMj/O1PX/3qe8f+Zwfz/m8P7/4ax7v+Aqun/msP7/5a/+P9ciMu5K0ZdK0lQ
+        MBBHUjYHUVdQAkJjugBGYJEAAAAAAAAAAAAAAAAALjk1ABsfGQFfUwACETx0FlaDyp6QufP8nsb8/4u1
+        8P99qOf/irTw/5fA+P+dxfz/iK/3/0Rh4f+OtPj/jbT3/4mx8v97pub/gqzr/5rD+v+Zwfn/a5fXzjBV
+        hkJFSR0QQFAzCUlONQMoJSQBc29sAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC8uMQFiRwACHUaCGVaD
+        ypuGsO33nsb8/5jB+f+Hse7/fqno/4Cq6f+Aqun/cJjl/3ij5/96pef/gKvq/5G69f+fx/3/kbr0/mOP
+        08szWpBDQUUeD0RTMQk4XTIEWGQ2AQAAAADd3WoAAAAAAAAAAAAAAAAAAAAAAAAAAABWVlYAXk9eAERf
+        RgFSPQACETZ1EkNxu3Jxnd/dk7z1/p3G/f+cxPz/lr73/5S99/+Vvvf/lb33/5rC+v+fxv3/l8D4/32n
+        5vBRfsOgJEx+MkFHHwxJTz0IU1Y8BDBMMAEJAAgAHRgdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAABH0AAAMpBgFOVQACAQknBSpWmy5MesOGa5faz4Cq6fCOt/P8krv1/5K79f+QufT9ha/s9XOe
+        391XhMmkMF2hUh08TxVGUBkISFo0BUtjSwJ2cVQB////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAIjQAACYyAABKTjcBcGsNAQATLgUTQYQeMmGpQz9tt2dHdb58Sna/f0Bt
+        t3E4ZatSIUqIKxYxQg9OSwAGO1IjBUdVOQNRVzQBHx4eAC4xLgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGt8WgBugFoAcW5ZAXJgPABGPCgAAAAAABEA
+        AAEIAAACBgAAAjIgAAJgTAIDTE4gAz1LOAJcXFkBUktWAFZSVgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANCgoAIB4dAHp7
+        eQFjPGUBRlQaAWd1AAEcQhoBGy1DAQIWBwAAAAEAAAEAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA//xf///gA///AAD//AAAf/gAAB/wAAAP4AAAD+AAAAfAAAADwAAAA4AA
+        AAGAAAABAAAAAQAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAGAAAABgAAAAcAAAAPAAAAD4AAAB+AA
+        AAfwAAAP+AAAH/wAAD//AAD//9wD///wP/8=
+</value>
+  </data>
 </root>
